--- a/.github/workflows/publish-release-artifact.yml
+++ b/.github/workflows/publish-release-artifact.yml
@@ -22,6 +22,7 @@ jobs:
           echo "::set-output name=project-version::$version"
   war:
     runs-on: ubuntu-latest
+    needs: determine-version
     steps:
       - name: Fetch war
         id: fetch-war
@@ -43,6 +44,7 @@ jobs:
           asset_content_type: application/java-archive
   debian:
     runs-on: ubuntu-latest
+    needs: determine-version
     steps:
       - name: Fetch Deb
         id: fetch-deb
@@ -66,6 +68,7 @@ jobs:
           asset_content_type: application/vnd.debian.binary-package
   redhat:
     runs-on: ubuntu-latest
+    needs: determine-version
     steps:
       - name: Fetch RPM
         id: fetch-rpm
@@ -89,6 +92,7 @@ jobs:
           asset_content_type: application/x-redhat-package-manager
   windows:
     runs-on: ubuntu-latest
+    needs: determine-version
     steps:
       - name: Fetch MSI
         id: fetch-msi
@@ -112,6 +116,7 @@ jobs:
           asset_content_type: application/octet-stream
   suse:
     runs-on: ubuntu-latest
+    needs: determine-version
     steps:
       - name: Fetch suse rpm
         id: fetch-suse-rpm
