--- a/.github/workflows/publish-release-artifact.yml
+++ b/.github/workflows/publish-release-artifact.yml
@@ -28,10 +28,10 @@ jobs:
           else
             is_lts=false
           fi
-          
+
           echo "Version is $version, is_lts: $is_lts"
 
-          echo "::set-output name=is-lts::is_lts"
+          echo "::set-output name=is-lts::${is_lts}"
           echo "::set-output name=project-version::$version"
   war:
     runs-on: ubuntu-latest
@@ -51,6 +51,8 @@ jobs:
           then
             REPO=war-stable
           fi
+
+          echo $REPO
           
           wget -q https://get.jenkins.io/${REPO}/${PROJECT_VERSION}/jenkins.war
       - name: Upload Release Asset
@@ -82,6 +84,8 @@ jobs:
           then
             REPO=debian-stable
           fi
+
+          echo $REPO
           
           wget -q https://get.jenkins.io/${REPO}/${FILE_NAME}
       - name: Upload Release Asset
@@ -116,7 +120,9 @@ jobs:
             REPO=redhat-stable
           fi
           
-          wget -q https://get.jenkins.io/redhat/${FILE_NAME}
+          echo $REPO
+          
+          wget -q https://get.jenkins.io/${REPO}/${FILE_NAME}
       - name: Upload Release Asset
         id: upload-rpm
         if: always()
@@ -149,6 +155,8 @@ jobs:
             REPO=windows-stable
           fi
           
+          echo $REPO
+          
           wget -q https://get.jenkins.io/${REPO}/${PROJECT_VERSION}/jenkins.msi
       - name: Upload Release Asset
         id: upload-msi
@@ -173,7 +181,6 @@ jobs:
           echo $PROJECT_VERSION
           FILE_NAME=jenkins-${PROJECT_VERSION}-1.2-opensuse.noarch.rpm
           IS_LTS=${{ needs.determine-version.outputs.is-lts }}
-          
           echo "::set-output name=file-name::$FILE_NAME"
 
           REPO=opensuse
@@ -181,6 +188,8 @@ jobs:
           then
             REPO=opensuse-stable
           fi
+          
+          echo $REPO
           
           wget -q https://get.jenkins.io/${REPO}/jenkins-${PROJECT_VERSION}-1.2.noarch.rpm -O ${FILE_NAME} 
       - name: Upload Release Asset
